api NYT - fist code - incomplete

--- a/Alberto/20171115-ejercicio-api/index.html
+++ b/Alberto/20171115-ejercicio-api/index.html
@@ -13,7 +13,7 @@
 				<form id="form-1">
 					Ciudad 1:<br>
 					<input type="text"><br>
-					<input class="button" type="submit" value="Comparar">
+					<input class="button" type="submit" value="Ver info">
 				</form>
 				
 				<div id="city-1"></div>
@@ -23,7 +23,7 @@
 				<form id="form-2">
 					Ciudad 2:<br>
 					<input type="text"><br>
-					<input class="button" type="submit" value="Comparar">
+					<input class="button" type="submit" value="Ver info">
 				</form>
 				
 				<div id="city-2"></div>
