--- a/Alberto/20171115-ejercicio-api/index.html
+++ b/Alberto/20171115-ejercicio-api/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title="Compara dos ciudades del mundo">
+        <title>Compara dos ciudades del mundo</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	
@@ -12,8 +12,8 @@
 			<div class="left">
 				<form id="form-1">
 					Ciudad 1:<br>
-					<input type="text"><br>
-					<input class="button" type="submit" value="Ver info">
+					<input id="city-name-1" value="Barcelona"><br>
+					<input id="button-1" type="submit" value="Ver info">
 				</form>
 				
 				<div id="city-1"></div>
