--- a/Alberto/20171116-api-terremotos/index.html
+++ b/Alberto/20171116-api-terremotos/index.html
@@ -19,7 +19,11 @@
                 <!--<p>Magnitud mínima:</p>
                 <input type="circle" value="0">-->
                 <p>Desde qué año</p>
-                    <select id="years">                    
+                    <select id="start-years">                    
+                    </select>
+                
+                <p>Hasta qué año</p>
+                    <select id="end-years">                    
                     </select>
 					
 					<p>Magnitud mínima</p>
